# brickify

./: .coveragerc  .travis.yml  MANIFEST.in  README.md  install  pyproject.toml  requirements.txt  setup.py
brickify/: __init__.py  brickify_gui.py  cli.py  images2gif.py  palettes.py
brickify/brickify/: brickify_gui.py
tests/: test_brickify.py
